Add request to Twitter
Note: that I have removed my bearer token so as to not make it public.
Not sure how I'd want to actually deal with that yet. There are some
tricks to this via minification, using AWS Lambda, or most secure,
spin up a server...

--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <button id="changeToDoggos"></button>
+    <script src="contentScript.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
